@@ -8,7 +8,7 @@ Methods
 
 ### method specificity
 
-```perl6
+```raku
 method specificity() returns Version
 ```
 
@@ -16,7 +16,7 @@ Returns selector specificity in the form v<id>.<class>.<type>
 
 ### method xpath
 
-```perl6
+```raku
 method xpath() returns Str
 ```
 
